[tool.poetry]
name = "python_jupyter_work"
version = "0.1.0"
description = ""
authors = ["hogehiko <takrockjp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pycausalimpact = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
